Bone Crash #37067

Closed
opened 2013-10-13 19:07:12 +02:00 by John Nyquist · 5 comments

%%%Consistently crashes on Mac and Win with steps below.

- Operating System, Graphics card ---

Mac OS 10.8
NVidia Geoforce GT

AND

Windows 7
ATI Radeon 5700 series

- Blender version with error, and version that worked ---

2.68a

- Short description of error ---

I can consistently crash Blender by CTRL-RMB on a bone.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open Blender
X to delete cube
Add an armature
Enter edit mode
Shift-D to duplicate bone, moving it off the original
While the new bone is still active, CTRL-RMB on the original bone
Blender crashes, sometimes on the 1st click, sometimes on a subsequent click

I discovered this accidentally (meant to press SHIFT but fumble-fingered it and pressed CTRL), but since it is so rare for Blender to crash (especially while doing something so trivial), that I looked into it further and found I could consistently cause the crash with those steps. Even after rebooting my machine and setting Blender to the factory defaults.

If you're interested in the crash report from the Mac, you can see it here:
https://docs.google.com/document/d/1FrrLqpU0Ymsb6kgBK9WIE0wkJKOJxm7yrw5ixzMMSBI/edit?usp=sharing
The interesting part of that may be:
Thread 0:: Dispatch queue: com.apple.main-thread
0 org.blenderfoundation.blender 0x000000010022dacc ED_pose_deselectall + 92
1 org.blenderfoundation.blender 0x000000010022dc52 ED_do_pose_selectbuffer + 210
2 org.blenderfoundation.blender 0x00000001001cd6b7 mouse_select + 951

%%%

%%%Consistently crashes on Mac and Win with steps below. - Operating System, Graphics card --- Mac OS 10.8 NVidia Geoforce GT AND Windows 7 ATI Radeon 5700 series - Blender version with error, and version that worked --- 2.68a - Short description of error --- I can consistently crash Blender by CTRL-RMB on a bone. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open Blender X to delete cube Add an armature Enter edit mode Shift-D to duplicate bone, moving it off the original While the new bone is still active, CTRL-RMB on the original bone Blender crashes, sometimes on the 1st click, sometimes on a subsequent click I discovered this accidentally (meant to press SHIFT but fumble-fingered it and pressed CTRL), but since it is so rare for Blender to crash (especially while doing something so trivial), that I looked into it further and found I could consistently cause the crash with those steps. Even after rebooting my machine and setting Blender to the factory defaults. If you're interested in the crash report from the Mac, you can see it here: https://docs.google.com/document/d/1FrrLqpU0Ymsb6kgBK9WIE0wkJKOJxm7yrw5ixzMMSBI/edit?usp=sharing The interesting part of that may be: Thread 0:: Dispatch queue: com.apple.main-thread 0 org.blenderfoundation.blender 0x000000010022dacc ED_pose_deselectall + 92 1 org.blenderfoundation.blender 0x000000010022dc52 ED_do_pose_selectbuffer + 210 2 org.blenderfoundation.blender 0x00000001001cd6b7 mouse_select + 951 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed with current trunk (NULL pchan->bone in ED_pose_deselectall). Not sure what ctrl-RMB click is supposed to do, though?%%%

%%%Confirmed with current trunk (NULL pchan->bone in ED_pose_deselectall). Not sure what ctrl-RMB click is supposed to do, though?%%%
Author

%%%Haha, as far as I know CTRL-RMB should do nothing! I hit it accidentally and got a surprise :-)%%%

%%%Haha, as far as I know CTRL-RMB should do nothing! I hit it accidentally and got a surprise :-)%%%

%%%This was quite broken (aside from the crash).

Ctrl+RMB is supposed to select objects while in editmode, however it ended up (incorrectly) attempting to do edit-object selection anyway.

fixed r60766. - no longer do editmode select when Ctrl+RMB is used.%%%

%%%This was quite broken (aside from the crash). Ctrl+RMB is supposed to select objects while in editmode, however it ended up (incorrectly) attempting to do edit-object selection anyway. fixed r60766. - no longer do editmode select when Ctrl+RMB is used.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37067
No description provided.